--- a/main.html
+++ b/main.html
@@ -70,6 +70,7 @@
             <!-- Botón 7 -->
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <button class="button-box standard-button btn">
+                    <a href="menu.html"></a>
                     <img src="Images/contabilidad.png" alt="Imagen 3" class="button-img img-fluid">
                     <h5>Contabilidad y Asientos</h5>
                 </button>
