footer, header, tipo de letra

--- a/main.html
+++ b/main.html
@@ -11,10 +11,9 @@
 <body>
     <header class="py-3 px-4 d-flex justify-content-between align-items-center">
         <div>Nombre del Usuario</div>
-        <img src="logo.png" alt="Logo de la cooperativa" height="50"> 
+        <img src="logo.png" alt="Logo de la cooperativa" height="50">
     </header>
     <main class="container">
-  
         <div class="row">
             <div class="col-12">
                 <form class="search-bar d-flex justify-content-center">
@@ -23,105 +22,105 @@
                 </form>
             </div>
         </div>
-
         <div class="row">
             <!-- Botón 1 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
                     <img src="Images/Activos.png" alt="Imagen 1" class="button-img img-fluid">
-                    <h5>Activos y Custodia</h5>
+                    <h6>Activos y Custodia</h6>
                 </button>
             </div>
             <!-- Botón 2 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
                     <img src="Images/banco.png" alt="Imagen 2" class="button-img img-fluid">
-                    <h5>Banco</h5>
+                    <h6>Banco</h6>
                 </button>
             </div>
             <!-- Botón 3 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
                     <img src="imagen3.jpg" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Caja</h5>
+                    <h6>Caja</h6>
                 </button>
             </div>
             <!-- Botón 4 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/caja-chica.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Caja Chica</h5>
+                    <img src="Images/caja-chica.png" alt="Imagen 4" class="button-img img-fluid">
+                    <h6>Caja Chica</h6>
                 </button>
             </div>
             <!-- Botón 5 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/clientes.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Clientes y Liquidacion</h5>
+                    <img src="Images/clientes.png" alt="Imagen 5" class="button-img img-fluid">
+                    <h6>Clientes y Liquidacion</h6>
                 </button>
             </div>
             <!-- Botón 6 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/cobros.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Cobros</h5>
+                    <img src="Images/cobros.png" alt="Imagen 6" class="button-img img-fluid">
+                    <h6>Cobros</h6>
                 </button>
             </div>
             <!-- Botón 7 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <button class="button-box standard-button btn">
-                    <a href="menu.html"></a>
-                    <img src="Images/contabilidad.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Contabilidad y Asientos</h5>
-                </button>
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+                <a href="asiento.html">
+                    <button class="button-box standard-button btn">
+                        <img src="Images/contabilidad.png" alt="Imagen 7" class="button-img img-fluid">
+                        <h6>Contabilidad y Asientos</h6>
+                    </button>
+                </a>
             </div>
             <!-- Botón 8 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/pagar y cobrar.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Cuentas por Pagar y Cuentas por Cobrar</h5>
+                    <img src="Images/pagar_y_cobrar.png" alt="Imagen 8" class="button-img img-fluid">
+                    <h6>Cuentas por Pagar y Cuentas por Cobrar</h6>
                 </button>
             </div>
             <!-- Botón 9 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/gastos diferentes.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Gastos diferentes y Cierres</h5>
+                    <img src="Images/gastos_diferentes.png" alt="Imagen 9" class="button-img img-fluid">
+                    <h6>Gastos diferentes y Cierres</h6>
                 </button>
             </div>
             <!-- Botón 10 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/presupuestos.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Presupuesto y Transferencia por Partida</h5>
+                    <img src="Images/presupuestos.png" alt="Imagen 10" class="button-img img-fluid">
+                    <h6>Presupuesto y Transferencia por Partida</h6>
                 </button>
             </div>
             <!-- Botón 11 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/producto.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Productos Financieros, Capacitacion y Colocacion</h5>
+                    <img src="Images/producto.png" alt="Imagen 11" class="button-img img-fluid">
+                    <h6>Productos Financieros, Capacitacion y Colocacion</h6>
                 </button>
             </div>
             <!-- Botón 12 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/tesoreria.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Tesoreria y Transferencias</h5>
+                    <img src="Images/tesoreria.png" alt="Imagen 12" class="button-img img-fluid">
+                    <h6>Tesoreria y Transferencias</h6>
                 </button>
             </div>
             <!-- Botón 13 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/tarjetas.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Tarjetas</h5>
+                    <img src="Images/tarjetas.png" alt="Imagen 13" class="button-img img-fluid">
+                    <h6>Tarjetas</h6>
                 </button>
             </div>
             <!-- Botón 14 -->
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
                 <button class="button-box standard-button btn">
-                    <img src="Images/usuario.png" alt="Imagen 3" class="button-img img-fluid">
-                    <h5>Usuarios y Organizacion</h5>
+                    <img src="Images/usuario.png" alt="Imagen 14" class="button-img img-fluid">
+                    <h6>Usuarios y Organizacion</h6>
                 </button>
             </div>
         </div>
