--- a/menu.html
+++ b/menu.html
@@ -7,25 +7,191 @@
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <!-- Header -->
-    <header class="text-center py-3">
-        <h1>Catálogo de Cuentas Contables</h1>
+    <header class="text-center py-2">
+        <h1>Departamento de Contabilidad</h1>
     </header>
 
-    <!-- Toggle Button -->
-    <button id="toggleButton" class="btn btn-primary">Menú</button>
+    <!-- Button Container -->
+    <div class="container mt-3">
+        <!-- Sección Cuentas -->
+        <h1 class="h4">Cuentas</h1>
+        <div class="row">
+            <!-- Botones de Cuentas -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="activos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Registrar Tipo de Cuentas</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="pasivos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Crear Cuentas</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="patrimonio.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Consultar Cuentas</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="ingresos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Actualizar Cuentas</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="gastos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Borrar Cuentas</h6>
+                    </button>
+                </a>
+            </div>
+        </div>
 
-    <!-- Scroll Bar Container -->
-    <div class="scroll-container" id="scrollContainer">
-        <div class="scroll-content">
-            <a href="#cuentas-contables">Cuentas Contables</a>
-            <a href="#asientos-contables">Asientos Contables</a>
-            <!-- Añadir más enlaces aquí según sea necesario -->
+        <!-- Sección Asientos -->
+        <h1 class="h4">Asientos</h1>
+        <div class="row">
+            <!-- Botones de Asientos -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="asientos_simples.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Registrar Tipo de Asientos</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="asientos_compuestos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Crear Asientos</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="asientos_compuestos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Aplicar Asientos</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="asientos_compuestos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Consultar Asientos</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="asientos_compuestos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Actualizar Asientos</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="asientos_compuestos.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Borrar Asientos</h6>
+                    </button>
+                </a>
+            </div>
+        </div>
+
+        <!-- Sección Tipo de Cambio -->
+        <h1 class="h4">Tipo de Cambio</h1>
+        <div class="row">
+            <!-- Botones de Tipo de Cambio -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="tipo_cambio.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Registrar Tipo de Moneda</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="tipo_cambio.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Crear Tipo de Cambio</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="tipo_cambio.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Consultar Tipo de Cambio</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="tipo_cambio.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Actualizar Tipo de Cambio</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="tipo_cambio.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Borrar Moneda</h6>
+                    </button>
+                </a>
+            </div>
+        </div>
+
+        <!-- Sección Impresiones -->
+        <h1 class="h4">Impresiones</h1>
+        <div class="row">
+            <!-- Botones de Impresiones -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="impresiones.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Estados de Resultados</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="impresiones.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Estados de Pérdidas y Ganancias</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="impresiones.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Balance de Situación</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="impresiones.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Estados Financieros</h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <a href="impresiones.html">
+                    <button class="button-box standard-button btn">
+                        <h6>Balance General</h6>
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
+
+    <footer class="text-center py-2">
+        © 2024 Cooperativa de Ahorro y Crédito
+    </footer>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
