--- a/main.html
+++ b/main.html
@@ -1,135 +1,186 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Principal de la Cooperativa</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-</head>
-<body>
-    <header class="py-3 px-4 d-flex justify-content-between align-items-center">
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header class="bg-primary text-white py-3">
+      <div class="container d-flex justify-content-between align-items-center">
         <div>Nombre del Usuario</div>
-        <img src="logo.png" alt="Logo de la cooperativa" height="50">
+        <img src="logo.png" alt="Logo de la cooperativa" height="50" />
+      </div>
     </header>
-    <main class="container">
-        <div class="row">
-            <div class="col-12">
-                <form class="search-bar d-flex justify-content-center">
-                    <input type="text" class="form-control" placeholder="Ingrese el departamento...">
-                    <button type="submit" class="btn btn-primary ml-2">Buscar</button>
-                </form>
-            </div>
+    <main class="container mt-5">
+      <div class="row">
+        <div class="col-12 mb-4">
+          <form class="search-bar d-flex justify-content-center">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Ingrese el departamento..."
+            />
+            <button type="submit" class="btn btn-primary ml-2">Buscar</button>
+          </form>
         </div>
-        <div class="row">
-            <!-- Botón 1 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/Activos.png" alt="Imagen 1" class="button-img img-fluid">
-                    <h6>Activos y Custodia</h6>
-                </button>
-            </div>
-            <!-- Botón 2 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/banco.png" alt="Imagen 2" class="button-img img-fluid">
-                    <h6>Banco</h6>
-                </button>
-            </div>
-            <!-- Botón 3 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="imagen3.jpg" alt="Imagen 3" class="button-img img-fluid">
-                    <h6>Caja</h6>
-                </button>
-            </div>
-            <!-- Botón 4 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/caja-chica.png" alt="Imagen 4" class="button-img img-fluid">
-                    <h6>Caja Chica</h6>
-                </button>
-            </div>
-            <!-- Botón 5 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/clientes.png" alt="Imagen 5" class="button-img img-fluid">
-                    <h6>Clientes y Liquidacion</h6>
-                </button>
-            </div>
-            <!-- Botón 6 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/cobros.png" alt="Imagen 6" class="button-img img-fluid">
-                    <h6>Cobros</h6>
-                </button>
-            </div>
-            <!-- Botón 7 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <a href="asiento.html">
-                    <button class="button-box standard-button btn">
-                        <img src="Images/contabilidad.png" alt="Imagen 7" class="button-img img-fluid">
-                        <h6>Contabilidad y Asientos</h6>
-                    </button>
-                </a>
-            </div>
-            <!-- Botón 8 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/pagar_y_cobrar.png" alt="Imagen 8" class="button-img img-fluid">
-                    <h6>Cuentas por Pagar y Cuentas por Cobrar</h6>
-                </button>
-            </div>
-            <!-- Botón 9 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/gastos_diferentes.png" alt="Imagen 9" class="button-img img-fluid">
-                    <h6>Gastos diferentes y Cierres</h6>
-                </button>
-            </div>
-            <!-- Botón 10 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/presupuestos.png" alt="Imagen 10" class="button-img img-fluid">
-                    <h6>Presupuesto y Transferencia por Partida</h6>
-                </button>
-            </div>
-            <!-- Botón 11 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/producto.png" alt="Imagen 11" class="button-img img-fluid">
-                    <h6>Productos Financieros, Capacitacion y Colocacion</h6>
-                </button>
-            </div>
-            <!-- Botón 12 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/tesoreria.png" alt="Imagen 12" class="button-img img-fluid">
-                    <h6>Tesoreria y Transferencias</h6>
-                </button>
-            </div>
-            <!-- Botón 13 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/tarjetas.png" alt="Imagen 13" class="button-img img-fluid">
-                    <h6>Tarjetas</h6>
-                </button>
-            </div>
-            <!-- Botón 14 -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-                <button class="button-box standard-button btn">
-                    <img src="Images/usuario.png" alt="Imagen 14" class="button-img img-fluid">
-                    <h6>Usuarios y Organizacion</h6>
-                </button>
-            </div>
+      </div>
+      <div class="row">
+        <!-- Botón 1 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='activos_custodia.html'"
+          >
+            <i class="fas fa-shield-alt fa-2x"></i>
+            <h6>Activos y Custodia</h6>
+          </button>
         </div>
+        <!-- Botón 2 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='banco.html'"
+          >
+            <i class="fas fa-university fa-2x"></i>
+            <h6>Banco</h6>
+          </button>
+        </div>
+        <!-- Botón 3 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='caja.html'"
+          >
+            <i class="fas fa-cash-register fa-2x"></i>
+            <h6>Caja</h6>
+          </button>
+        </div>
+        <!-- Botón 4 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='caja_chica.html'"
+          >
+            <i class="fas fa-wallet fa-2x"></i>
+            <h6>Caja Chica</h6>
+          </button>
+        </div>
+        <!-- Botón 5 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='clientes_liquidacion.html'"
+          >
+            <i class="fas fa-users fa-2x"></i>
+            <h6>Clientes y Liquidación</h6>
+          </button>
+        </div>
+        <!-- Botón 6 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='cobros.html'"
+          >
+            <i class="fas fa-hand-holding-usd fa-2x"></i>
+            <h6>Cobros</h6>
+          </button>
+        </div>
+        <!-- Botón 7 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <a href="contabilidad_asientos.html">
+            <button class="button-box standard-button btn">
+              <i class="fas fa-book fa-2x"></i>
+              <h6>Contabilidad y Asientos</h6>
+            </button>
+          </a>
+        </div>
+        <!-- Botón 8 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='cuentas_pagar_cobrar.html'"
+          >
+            <i class="fas fa-file-invoice-dollar fa-2x"></i>
+            <h6>Cuentas por Pagar y Cuentas por Cobrar</h6>
+          </button>
+        </div>
+        <!-- Botón 9 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='gastos_diferentes_cierres.html'"
+          >
+            <i class="fas fa-file-invoice fa-2x"></i>
+            <h6>Gastos Diferentes y Cierres</h6>
+          </button>
+        </div>
+        <!-- Botón 10 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='presupuesto_transferencia.html'"
+          >
+            <i class="fas fa-chart-pie fa-2x"></i>
+            <h6>Presupuesto y Transferencia por Partida</h6>
+          </button>
+        </div>
+        <!-- Botón 11 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='productos_financieros.html'"
+          >
+            <i class="fas fa-box fa-2x"></i>
+            <h6>Productos Financieros, Capacitación y Colocación</h6>
+          </button>
+        </div>
+        <!-- Botón 12 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='tesoreria_transferencias.html'"
+          >
+            <i class="fas fa-money-check-alt fa-2x"></i>
+            <h6>Tesorería y Transferencias</h6>
+          </button>
+        </div>
+        <!-- Botón 13 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='tarjetas.html'"
+          >
+            <i class="fas fa-credit-card fa-2x"></i>
+            <h6>Tarjetas</h6>
+          </button>
+        </div>
+        <!-- Botón 14 -->
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
+          <button
+            class="button-box standard-button btn"
+            onclick="location.href='usuarios_organizacion.html'"
+          >
+            <i class="fas fa-user-cog fa-2x"></i>
+            <h6>Usuarios y Organización</h6>
+          </button>
+        </div>
+      </div>
     </main>
-    <footer class="text-center py-3">
-        © 2024 Cooperativa de Ahorro y Crédito
+    <footer class="bg-primary text-white text-center py-3">
+      © 2024 Cooperativa de Ahorro y Crédito
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
