add the gestion of accounts and asientos

--- a/registrar-asiento.html
+++ b/registrar-asiento.html
@@ -17,7 +17,7 @@
 
         header,
         footer {
-            background-color: #00aae4;
+            background-color: #3b5998;
             color: white;
         }
 
