--- a/main.html
+++ b/main.html
@@ -97,7 +97,7 @@
         </div>
         <!-- Botón 7 -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3">
-          <a href="contabilidad_asientos.html">
+          <a href="menu.html">
             <button class="button-box standard-button btn">
               <i class="fas fa-book fa-2x"></i>
               <h6>Contabilidad y Asientos</h6>
