--- a/registrar-cuenta.html
+++ b/registrar-cuenta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos de Cuenta</title>
+    <title>Registro de Cuentas Contables</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -17,7 +17,7 @@
 
         header,
         footer {
-            background-color: #00aae4;
+            background-color: #3b5998;
             color: white;
         }
 
@@ -28,7 +28,7 @@
         }
 
         .button-box {
-            background-color: #00aae4;
+            background-color: #3b5998;
             color: white;
             padding: 10px;
             margin-bottom: 10px;
@@ -54,27 +54,79 @@
         .btn-primary {
             background-color: #2c3e50;
         }
+
+        .table-container {
+            margin-top: 20px;
+        }
+
+        table {
+            width: 100%;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+
+        .form-footer {
+            display: flex;
+            justify-content: flex-end;
+        }
     </style>
 </head>
 <body>
     <header class="text-center p-3">
-        <h1>Tipos de Cuenta</h1>
+        <h1>Registro de Cuentas Contables</h1>
     </header>
     
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <h2 class="text-center">Añadir Tipo de Cuenta</h2>
                 <form>
                     <div class="form-group">
-                        <label for="accountType">Seleccione el tipo de cuenta</label>
-                        <select class="form-control" id="accountType">
-                            <option>Cuenta de Ahorros</option>
-                            <option>Cuenta Corriente</option>
-                            <option>Cuenta de Depósito a Plazo Fijo</option>
-                        </select>
+                        <label for="accountType">Ingrese el tipo de cuenta</label>
+                        <input type="text" class="form-control" id="accountTypeInput" placeholder="Tipo de cuenta">
                     </div>
-                    <button type="submit" class="btn btn-primary standard-button">Añadir Cuenta</button>
+                    <div class="table-container">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Nombre del Tipo de Cuenta</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Activos</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Pasivos</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Patrimonio</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Gastos</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Ingresos</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Cuentas de Orden</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="form-footer">
+                        <button type="submit" class="btn btn-primary standard-button">Añadir Cuenta</button>
+                    </div>
                 </form>
             </div>
         </div>
