Anadir las clases de captacion

--- a/Captacion/tipos-depositos.html
+++ b/Captacion/tipos-depositos.html
@@ -100,7 +100,7 @@
         <h1>Tipos de depositos</h1>
     </header>
     <div class="container mt-5">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="savings-card">
                     <img src="Images/plazos.png" alt="Plazos">
@@ -126,7 +126,6 @@
                 </div>
             </div>
         </div>
-       
     </div>
     
     <footer>
