--- a/Tesoreria/Asientos.html
+++ b/Tesoreria/Asientos.html
@@ -95,14 +95,16 @@
     </script>
 </head>
 <body>
-    <header>
-        <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
-        <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
-    </header>
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2 mb-4">
+        <div>
+            <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
+        </div>
+        <h3 class="text-center flex-grow-1">Gestión de Asientos Contables</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
     
     <div class="container">
         <div class="row justify-content-center">
-            <h3 class="text-center">Gestión de Asientos Contables</h3>
             <div class="col-md-8">
                 <div class="asiento" data-id="1">
                     <table class="asiento-table">
