--- a/Tesoreria/index.html
+++ b/Tesoreria/index.html
@@ -36,50 +36,60 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
-            <h1>Hola, *Usuario*</h1>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2">
+        <div>
+            <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
         </div>
-
+        <h3 class="text-center flex-grow-1">Modulo Tesorería / Transferencias</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="main-content container">
-            <h3 class="text-center mt-4">Tesorería / Transferencias</h3>
+            <h3 class="text-center mt-4">Pagina Principal</h3>
             <div class="row mb-4">
                 <div class="col-md-4 module">
-                    <img src="img/Tesoreria.png" alt="Monitoreo de efectivo">
+                    <img src="img/Tesoreria.png">
                     <a href="monitoreoEfectivo.html" class="module-title">Monitoreo de efectivo</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Transferencias.png" alt="Transferencias Internas">
-                    <a href="Transferencias.html" class="module-title">Transferencias Internas</a>
+                    <img src="img/Transferencias.png">
+                    <a href="transferencias.html" class="module-title">Transferencias Internas</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Boveda.png" alt="Bóveda">
-                    <a href="GestionBovedas.html" class="module-title">Bóveda</a>
+                    <img src="img/Boveda.png">
+                    <a href="gestionBovedas.html" class="module-title">Bóveda</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Desembolsos.png" alt="Desembolsos/ Prestamos">
-                    <a href="Desembolsos.html" class="module-title">Desembolsos</a>
+                    <img src="img/Desembolsos.png">
+                    <a href="desembolsos.html" class="module-title">Desembolsos</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/ArqueoCajas.png" alt="Flujo/ Arqueo de Cajas">
-                    <a href="ArqueoCajas.html" class="module-title">Gestion de Cajas</a>
+                    <img src="img/ArqueoCajas.png">
+                    <a href="gestionCajas.html" class="module-title">Gestion de Cajas</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Inversiones.png" alt="Gestión de Inversiones">
-                    <a href="Inversiones.html" class="module-title">Gestión de Inversiones</a>
+                    <img src="img/Inversiones.png">
+                    <a href="inversiones.html" class="module-title">Gestión de Inversiones</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Reportes.png" alt="Reportes">
-                    <a href="Reportes.html" class="module-title">Reportes</a>
+                    <img src="img/Asientos.png">
+                    <a href="asientos.html" class="module-title">Asientos</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Normativas.png" alt="Normativas">
-                    <a href="Normativas.html" class="module-title">Normativas</a>
+                    <img src="img/Movimientos.jpg">
+                    <a href="movimientos.html" class="module-title">Movimientos</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Asientos.png" alt="Asientos">
-                    <a href="Asientos.html" class="module-title">Asientos</a>
+                    <img src="img/ClienteTesoreria.png">
+                    <a href="clientesTesoreria.html" class="module-title">Clientes de Tesoreria</a>
+                </div>
+                <div class="col-md-4 module">
+                    <img src="img/Reportes.png">
+                    <a href="reportes.html" class="module-title">Reportes</a>
+                </div>
+                <div class="col-md-4 module">
+                    <img src="img/Normativas.png">
+                    <a href="normativas.html" class="module-title">Normativas</a>
                 </div>
             </div>
         </div>
