--- a/Tesoreria/Boveda.html
+++ b/Tesoreria/Boveda.html
@@ -25,6 +25,9 @@
             font-size: 18px;
             border-radius: 5px;
             width: 200px;
+            height: 90px;
+            display: block;
+            margin: 10px auto;
         }
 
         .btn-custom:hover {
@@ -34,23 +37,26 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
-            <a href="GestionBovedas.html" class="btn btn-light mx-3 my-2">Volver</a>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2 mb-4">
+        <div>
+            <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
         </div>
+        <h3 class="text-center flex-grow-1">Boveda</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="content">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                     <h3>Total en Bóveda</h3>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 mb-3">
                     <h3>Acciones</h3>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-2 mt">
+                <div class="col-md-2">
                     <div class="info-box">
                         <h4>CRC</h4>
                         <p>₡20,000,000</p>
@@ -71,12 +77,12 @@
                 <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalIngresarDinero">Ingresar Dinero</button>
                     <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalRetirarDinero">Retirar Dinero</button>
-                    <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalMovimientos">Ver Movimientos</button>
+                    <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalActualizarTipoCambio">Actualizar Tipo de Cambio</button>
                 </div>
             </div>
 
             <div class="row justify-content-center">
-                <h3 class="mb-4">Tasa de cambio:</h3>
+                <h3 class="mb-5">Tasa de cambio:</h3>
                 <div class="col-md-3 mt-1 mx-3">
                     <h4>CRC a USD</h4>
                     <canvas id="colonesToUsdChart"></canvas>
@@ -147,92 +153,34 @@
         </div>
     </div>
 
-    <!-- Modal Ver Movimientos -->
-    <div class="modal fade" id="modalMovimientos" tabindex="-1" aria-labelledby="modalMovimientosLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+    <!-- Modal Actualizar Tipo de Cambio -->
+    <div class="modal fade" id="modalActualizarTipoCambio" tabindex="-1" aria-labelledby="modalActualizarTipoCambioLabel" aria-hidden="true">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalMovimientosLabel">Últimos Movimientos</h5>
+                    <h5 class="modal-title" id="modalActualizarTipoCambioLabel">Actualizar Tipo de Cambio</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="row mb-3">
-                        <div class="col-md-4">
-                            <label for="filterFecha" class="form-label">Filtrar por Fecha</label>
-                            <input type="date" class="form-control" id="filterFecha">
-                        </div>
-                        <div class="col-md-4">
-                            <label for="filterTipo" class="form-label">Filtrar por Tipo de Acción</label>
-                            <select class="form-select" id="filterTipo">
-                                <option value="">Todos</option>
-                                <option value="Ingreso">Ingreso</option>
-                                <option value="Retiro">Retiro</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="filterMoneda" class="form-label">Filtrar por Moneda</label>
-                            <select class="form-select" id="filterMoneda">
-                                <option value="">Todas</option>
-                                <option value="CRC">Colones</option>
-                                <option value="USD">Dólares</option>
-                                <option value="EUR">Euros</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Descripción</th>
-                                    <th>Moneda</th>
-                                    <th>Monto</th>
-                                    <th>Fecha</th>
-                                    <th>Tipo de Acción</th>
-                                    <th>Nombre de la Organización</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Ahorro 402640041</td>
-                                    <td>USD</td>
-                                    <td>$50,000</td>
-                                    <td>2024-06-01</td>
-                                    <td>Ingreso</td>
-                                    <td>Org A</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Cierre Caja 5</td>
-                                    <td>CRC</td>
-                                    <td>₡75,000</td>
-                                    <td>2024-06-03</td>
-                                    <td>Ingreso</td>
-                                    <td>Org B</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Transacciones</td>
-                                    <td>EUR</td>
-                                    <td>€120,000</td>
-                                    <td>2024-06-05</td>
-                                    <td>Retiro</td>
-                                    <td>Org C</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Fondos para Caja Chica</td>
-                                    <td>CRC</td>
-                                    <td>₡30,000</td>
-                                    <td>2024-06-07</td>
-                                    <td>Retiro</td>
-                                    <td>Org D</td>
-                                </tr>
-                                <!-- Añadir más filas según sea necesario -->
-                            </tbody>
-                        </table>
-                    </div>
+                    <form id="formActualizarTipoCambio">
+                        <label for="monedaOrigen" class="form-label">Moneda Origen</label>
+                        <select class="form-select" id="monedaOrigen">
+                            <option value="CRC">Colones</option>
+                            <option value="USD">Dólares</option>
+                            <option value="EUR">Euros</option>
+                        </select>
+                        <label for="monedaDestino" class="form-label">Moneda Destino</label>
+                        <select class="form-select" id="monedaDestino">
+                            <option value="CRC">Colones</option>
+                            <option value="USD">Dólares</option>
+                            <option value="EUR">Euros</option>
+                        </select>
+                        <label for="tasa" class="form-label">Tasa de Cambio</label>
+                        <input type="number" step="0.0001" class="form-control" id="tasa" placeholder="Ingrese la tasa de cambio">
+                        <label for="fechaCambio" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fechaCambio">
+                        <button type="button" class="btn btn-primary btn-lg mt-3" id="btnActualizarTipoCambio">Actualizar</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -241,9 +189,10 @@
     <footer class="footer mt-5">
         <p>&copy; 2024 Cooperativa de Ahorro. Todos los derechos reservados.</p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script3.js"></script>
+    <script src="grafTasaCambio.js"></script>
     <script>
         document.getElementById('btnIngresarDinero').addEventListener('click', function () {
             const isSuccessful = Math.random() > 0.5;
@@ -265,6 +214,17 @@
             }
             const modalRetirar = bootstrap.Modal.getInstance(document.getElementById('modalRetirarDinero'));
             modalRetirar.hide();
+        });
+
+        document.getElementById('btnActualizarTipoCambio').addEventListener('click', function () {
+            const isSuccessful = Math.random() > 0.5;
+            if (isSuccessful) {
+                alert('Tipo de cambio actualizado exitosamente');
+            } else {
+                alert('Error al actualizar el tipo de cambio');
+            }
+            const modalActualizar = bootstrap.Modal.getInstance(document.getElementById('modalActualizarTipoCambio'));
+            modalActualizar.hide();
         });
     </script>
 </body>
