--- a/Tesoreria/GestionBovedas.html
+++ b/Tesoreria/GestionBovedas.html
@@ -8,41 +8,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        .btn-custom {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 5px;
-            width: 150px;
-        }
-
-        .btn-custom:hover {
-            background-color: #2d4373;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2">
+        <div>
             <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
         </div>
+        <h3 class="text-center flex-grow-1">Gestión de Bóvedas</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="content">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>Gestión de Bóvedas</h3>
-                </div>
-                <div class="col-md-6 d-flex justify-content-end align-items-center">
-                    <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda" onclick="openCreateModal()">Crear Bóveda</button>
-                    <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda" onclick="openEditModal()">Editar Bóveda</button>
-                    <button class="btn btn-custom mx-2" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar Bóveda</button>
-                </div>
-            </div>
-
-            <div class="row justify-content-center mt-4">
+            <div class="row justify-content-center mt-2">
                 <div class="col-md-10">
                     <div class="table-responsive">
                         <table class="table table-bordered">
@@ -54,7 +32,7 @@
                                     <th>Moneda</th>
                                     <th>Monto</th>
                                     <th>Nombre de la Organización</th>
-                                    <th>Ir a la Boveda</th>
+                                    <th>Acciones</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -66,7 +44,9 @@
                                     <td>₡10,000,000</td>
                                     <td>Org A</td>
                                     <td>
-                                        <button class="btn btn-primary btn-lg" onclick="window.location.href='Boveda.html?id=1'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" onclick="window.location.href='boveda.html?id=1'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Editar</button>
+                                        <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -77,7 +57,9 @@
                                     <td>$20,000</td>
                                     <td>Org B</td>
                                     <td>
-                                        <button class="btn btn-primary btn-lg" onclick="window.location.href='Boveda.html?id=2'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" onclick="window.location.href='boveda.html?id=2'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Editar</button>
+                                        <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -88,7 +70,9 @@
                                     <td>€15,000</td>
                                     <td>Org C</td>
                                     <td>
-                                        <button class="btn btn-primary btn-lg" onclick="window.location.href='Boveda.html?id=3'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" onclick="window.location.href='boveda.html?id=3'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Editar</button>
+                                        <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -99,34 +83,41 @@
                                     <td>₡5,000,000</td>
                                     <td>Org D</td>
                                     <td>
-                                        <button class="btn btn-primary btn-lg" onclick="window.location.href='Boveda.html?id=4'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" onclick="window.location.href='boveda.html?id=4'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Editar</button>
+                                        <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar</button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
                                     <td>Ana Fernández</td>
                                     <td>Heredia</td>
-                                    <td>CRC</td>
-                                    <td>₡5,000,000</td>
+                                    <td>USD</td>
+                                    <td>$28,000</td>
                                     <td>Org D</td>
                                     <td>
-                                        <button class="btn btn-primary btn-lg" onclick="window.location.href='Boveda.html?id=4'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" onclick="window.location.href='Boveda.html?id=4'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Editar</button>
+                                        <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar</button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
                                     <td>Ana Fernández</td>
                                     <td>Heredia</td>
-                                    <td>CRC</td>
-                                    <td>₡5,000,000</td>
+                                    <td>EUR</td>
+                                    <td>€19,000</td>
                                     <td>Org D</td>
                                     <td>
-                                        <button class="btn btn-primary btn-lg" onclick="window.location.href='Boveda.html?id=4'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" onclick="window.location.href='Boveda.html?id=4'">Ir</button>
+                                        <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Editar</button>
+                                        <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarBoveda">Eliminar</button>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
+                    <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalCrearEditarBoveda">Crear Bóveda</button>
                 </div>
             </div>
         </div>
@@ -188,7 +179,7 @@
                 </div>
                 <div class="modal-body">
                     <p>¿Está seguro de que desea eliminar esta bóveda?</p>
-                    <button type="button" class="btn btn-danger">Eliminar</button>
+                    <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">Eliminar</button>
                 </div>
             </div>
         </div>
@@ -199,18 +190,20 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        function openCreateModal() {
-            document.getElementById('modalCrearEditarBovedaLabel').innerText = 'Crear Bóveda';
-            document.getElementById('btnGuardarBoveda').innerText = 'Crear Bóveda';
-            // Reset form
-            document.getElementById('formCrearEditarBoveda').reset();
-        }
+        document.getElementById('btnGuardarBoveda').addEventListener('click', function () {
+            const isConfirmed = confirm('¿Estás seguro de guardar esta boveda?');
+            if (isConfirmed) {
+                alert('Registro guardado exitosamente');
+                const modalRegistro = bootstrap.Modal.getInstance(document.getElementById('modalRegistro'));
+                modalRegistro.hide();
+            }
+        });
 
-        function openEditModal() {
-            document.getElementById('modalCrearEditarBovedaLabel').innerText = 'Editar Bóveda';
-            document.getElementById('btnGuardarBoveda').innerText = 'Guardar Cambios';
-            // Here you should load the data into the form for editing
-        }
+        document.getElementById('btnConfirmarEliminar').addEventListener('click', function () {
+            alert('Registro eliminado exitosamente');
+            const modalEliminar = bootstrap.Modal.getInstance(document.getElementById('modalEliminarBoveda'));
+            modalEliminar.hide();
+        });
     </script>
 </body>
 
