--- a/Tesoreria/Normativas.html
+++ b/Tesoreria/Normativas.html
@@ -11,14 +11,15 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2">
+        <div>
             <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
         </div>
+        <h3 class="text-center flex-grow-1">Normativas</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="content mt-4">
-            <h2 class="text-center">Normativas</h2>
-
             <!-- Sección de Reporte de Transacciones Sospechosas -->
             <div class="row mt-4 justify-content-center">
                 <div class="col-md-10">
