--- a/Tesoreria/Reportes.html
+++ b/Tesoreria/Reportes.html
@@ -11,15 +11,17 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2 mb-3">
+        <div>
             <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
         </div>
+        <h3 class="text-center flex-grow-1">Reportes</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
             <div class="card p-2" style="width: 30rem;">
                 <div class="card-body">
-                    <h2 class="card-title text-center">Reportes</h2>
                     <form>
                         <div class="mb-3">
                             <label for="tipoReporte" class="form-label">Tipo de Reporte</label>
@@ -44,7 +46,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
+    <footer class="footer mt-3">
         <p>&copy; 2024 Cooperativa de Ahorro. Todos los derechos reservados.</p>
     </footer>
 </body>
