--- a/Tesoreria/Transferencias.html
+++ b/Tesoreria/Transferencias.html
@@ -11,56 +11,53 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
-            <a href="#" class="btn btn-light mx-3 my-2">Volver</a>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2">
+        <div>
+            <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
         </div>
+        <h3 class="text-center flex-grow-1">Transferencias Internas</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="content">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>Transferencias Internas</h3>
-                </div>
-                <div class="col-md-3">
-                    <h3>Movimientos Recientes</h3>
+            <div class="row mx-3">
+                <div class="col-md-4">
+                    <h3>Transferencias Recientes</h3>
                 </div>
                 <div class="col-md-3">
                     <label for="filterCuenta" class="form-label">Filtrar por # Trans.</label>
                     <input type="text" class="form-control" id="filterCuenta"
                         placeholder="Ingrese el # de transferencia">
                 </div>
+                <div class="col-md-2">
+                    <label for="filterFecha" class="form-label">Filtrar por Fecha</label>
+                    <input type="date" class="form-control" id="filterFecha">
+                </div>
+                <div class="col-md-2">
+                    <label for="filterMoneda" class="form-label">Filtrar por Moneda</label>
+                    <select class="form-select" id="filterMoneda">
+                        <option value="">Todas</option>
+                        <option value="CRC">CRC</option>
+                        <option value="USD">USD</option>
+                        <option value="EUR">EUR</option>
+                    </select>
+                </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-2">
-                    <div class="info-box">
-                        <h4>Total Transferido</h4>
-                        <p>₡500,000</p>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="info-box">
-                        <h4>Transferencias a Cajas</h4>
-                        <p>₡750,000</p>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="info-box">
-                        <h4>Pagos a Proveedores</h4>
-                        <p>₡300,000</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
+            <div class="row justify-content-center mb-3">
+                <div class="col-md-10">
                     <div class="table-responsive mt-4">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" id="transferenciasTable">
                             <thead>
                                 <tr>
                                     <th>Numero de Transferencia</th>
                                     <th>Cuenta Origen</th>
                                     <th>Cuenta Destino</th>
-                                    <th>Divisa</th>
+                                    <th>Moneda</th>
                                     <th>Monto</th>
                                     <th>Fecha</th>
+                                    <th>Descripción</th>
+                                    <th>Organización</th>
                                     <th>Estado</th>
                                 </tr>
                             </thead>
@@ -72,6 +69,8 @@
                                     <td>EUR</td>
                                     <td>€50,000</td>
                                     <td>2024-06-01</td>
+                                    <td>Transferencia de prueba</td>
+                                    <td>Org A</td>
                                     <td>Completada</td>
                                 </tr>
                                 <tr>
@@ -81,6 +80,8 @@
                                     <td>CRC</td>
                                     <td>₡75,000</td>
                                     <td>2024-06-03</td>
+                                    <td>Transferencia de prueba</td>
+                                    <td>Org B</td>
                                     <td>Pendiente</td>
                                 </tr>
                                 <tr>
@@ -90,6 +91,8 @@
                                     <td>CRC</td>
                                     <td>₡120,000</td>
                                     <td>2024-06-05</td>
+                                    <td>Transferencia de prueba</td>
+                                    <td>Org C</td>
                                     <td>Cancelada</td>
                                 </tr>
                                 <tr>
@@ -99,36 +102,34 @@
                                     <td>USD</td>
                                     <td>$30,000</td>
                                     <td>2024-06-07</td>
+                                    <td>Transferencia de prueba</td>
+                                    <td>Org D</td>
                                     <td>Completada</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <div class="col-md-2 position-absolute Trasferencia">
-                    <div class="info-box">
-                        <h4>Pagos a Trabajadores</h4>
-                        <p>₡340,000</p>
-                    </div>
-                </div>
-                <div class="Facturas col-md-2 position-absolute">
-                    <div class="info-box">
-                        <h4>Pagos En Facturas</h4>
-                        <p>₡210,000</p>
-                    </div>
-                </div>
             </div>
 
-            <div class="row mb-5">
+            <div class="row mb-5 justify-content-center">
                 <div class="col-md-6">
                     <h3>Realizar Transferencia</h3>
-                    <form>
+                    <form id="formTransferencia">
                         <div class="mb-3">
-                            <label for="Tipo" class="form-label">Tipo de Transferencia</label>
-                            <select class="form-select" id="filterEstado" disabled>
-                        <option value="Interna">Interna</option>
-                        <option value="Externa">Externa</option>
-                    </select>
+                            <label for="tipoTransferencia" class="form-label">Tipo de Transferencia</label>
+                            <select class="form-select" id="tipoTransferencia" disabled>
+                                <option value="Interna">Interna</option>
+                                <option value="Externa">Externa</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cuentaOrigen" class="form-label">Cuenta Origen</label>
+                            <select class="form-select" id="cuentaOrigen">
+                                <option value="12345678">12345678</option>
+                                <option value="23456789">23456789</option>
+                                <option value="34567890">34567890</option>
+                            </select>
                         </div>
                         <div class="mb-3">
                             <label for="cuentaDestino" class="form-label">Cuenta Destino</label>
@@ -136,7 +137,7 @@
                                 placeholder="Ingrese la cuenta de destino">
                         </div>
                         <div class="mb-3">
-                            <label for="divisaTransaccion" class="form-label">Divisa</label>
+                            <label for="divisaTransaccion" class="form-label">Moneda</label>
                             <select class="form-select" id="divisaTransaccion">
                                 <option value="CRC">CRC - Colón Costarricense</option>
                                 <option value="USD">USD - Dólar Estadounidense</option>
@@ -148,21 +149,49 @@
                             <input type="text" class="form-control" id="monto"
                                 placeholder="Ingrese el monto a transferir">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg">Realizar Transferencia</button>
+                        <div class="mb-3">
+                            <label for="descripcion" class="form-label">Descripción</label>
+                            <input type="text" class="form-control" id="descripcion"
+                                placeholder="Ingrese la descripción">
+                        </div>
+                        <div class="mb-3">
+                            <label for="organizacion" class="form-label">Organización</label>
+                            <select class="form-select" id="organizacion">
+                                <option value="Org A">Org A</option>
+                                <option value="Org B">Org B</option>
+                                <option value="Org C">Org C</option>
+                            </select>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-lg" id="realizarTransferenciaBtn">Realizar
+                            Transferencia</button>
                     </form>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <h3>Transferencias Internas Completadas</h3>
                     <canvas id="scheduledTransfersChart"></canvas>
                 </div>
             </div>
         </div>
     </div>
+
     <footer class="footer">
         <p>&copy; 2024 Cooperativa de Ahorro. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script2.js"></script>
+    <script src="grafTransferencias.js"></script>
+    <script>
+        document.getElementById('realizarTransferenciaBtn').addEventListener('click', function () {
+            const isConfirmed = confirm('¿Estás seguro de realizar esta transferencia?');
+            if (isConfirmed) {
+                const transferenciaExitosa = Math.random() > 0.5; // Simula el éxito o fracaso de la transferencia
+                if (transferenciaExitosa) {
+                    alert('Transferencia realizada exitosamente');
+                } else {
+                    alert('Error al realizar la transferencia');
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
