--- a/Tesoreria/gestionCajas.html
+++ b/Tesoreria/gestionCajas.html
@@ -4,22 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flujo/Arqueo de Cajas</title>
+    <title>Gestion de Cajas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
-            <a href="#" class="btn btn-light mx-3 my-2">Volver</a>
-            <h5 class="navbar navbar-light justify-content-end mx-4">logo</h5>
+    <div class="header d-flex justify-content-between align-items-center px-3 py-2">
+        <div>
+            <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
         </div>
+        <h3 class="text-center flex-grow-1">Gestion de Cajas</h3>
+        <h5 class="navbar navbar-light">logo</h5>
+    </div>
+    <div class="container-fluid">
         <div class="content">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md-3 mx-5">
-                    <h3>Gestion de Cajas</h3>
+                    <h3>Arqueo de Cajas</h3>
                 </div>
                 <div class="col-md-3">
                     <label for="filterCedula" class="form-label">Filtrar por #</label>
@@ -39,7 +42,7 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-md-9">
+            <div class="col-md-10">
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <thead>
@@ -52,6 +55,7 @@
                                 <th>Entradas</th>
                                 <th>Salidas</th>
                                 <th>Saldo Final</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -64,6 +68,10 @@
                                 <td>₡500,000</td>
                                 <td>₡300,000</td>
                                 <td>₡1,200,000</td>
+                                <td>
+                                    <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalRegistro">Editar</button>
+                                    <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarRegistro">Eliminar</button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>2c3dsc</td>
@@ -74,6 +82,10 @@
                                 <td>₡400,000</td>
                                 <td>₡600,000</td>
                                 <td>₡1,300,000</td>
+                                <td>
+                                    <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalRegistro">Editar</button>
+                                    <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarRegistro">Eliminar</button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>223dsdsc</td>
@@ -84,6 +96,10 @@
                                 <td>₡300,000</td>
                                 <td>₡200,000</td>
                                 <td>₡2,100,000</td>
+                                <td>
+                                    <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalRegistro">Editar</button>
+                                    <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarRegistro">Eliminar</button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>25sdsc</td>
@@ -94,64 +110,58 @@
                                 <td>₡100,000</td>
                                 <td>₡99,000</td>
                                 <td>₡1,000</td>
+                                <td>
+                                    <button class="btn btn-primary btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalRegistro">Editar</button>
+                                    <button class="btn btn-danger btn-lg btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modalEliminarRegistro">Eliminar</button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="col-md-2 mt-4">
-                <div class="col-md-10 mb-2">
-                    <button class="btn btn-primary btn-lg w-100" data-bs-toggle="modal" data-bs-target="#modalRegistro">Añadir Registro</button>
-                </div>
-                <div class="col-md-10 mb-2">
-                    <button class="btn btn-primary btn-lg w-100" data-bs-toggle="modal" data-bs-target="#modalRegistro">Editar Registro</button>
-                </div>
-                <div class="col-md-10 mb-2">
-                    <button class="btn btn-danger btn-lg w-100">Eliminar Registro</button>
-                </div>
+                <button class="btn btn-primary btn-lg btn-sm mx-1 mb-5" data-bs-toggle="modal" data-bs-target="#modalRegistro">Añadir Registro</button>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8 mx-5">
-                <h3>Transferir Dinero a Cajas</h3>
-            </div>
-        </div>
-        <form id="formTransferencia">
-            <div class="row justify-content-center">
-                <div class="col-md-5 mt-3 mb-5">
-                    <label for="solicitud" class="form-label">Solicitud de dinero</label>
-                    <select class="form-select" id="solicitud">
-                        <option value="solicitud1">Caja 1 - Euro</option>
-                        <option value="solicitud2">Caja 2 - Dólar</option>
-                        <option value="solicitud3">Caja 3 - Colones</option>
-                    </select>
-                    <label for="cajaDestino" class="form-label">Caja de Destino</label>
-                    <select class="form-select" id="cajaDestino">
-                        <option value="Caja 1">Caja 1</option>
-                        <option value="Caja 2">Caja 2</option>
-                        <option value="Caja 3">Caja 3</option>
-                        <option value="Caja Chica">Caja Chica</option>
-                    </select>
-                    <label for="moneda" class="form-label">Moneda</label>
-                    <select class="form-select" id="moneda">
-                        <option value="CRC">Colones</option>
-                        <option value="USD">Dólares</option>
-                        <option value="EUR">Euros</option>
-                    </select>
-                    <label for="montoTransferencia" class="form-label">Monto a Transferir</label>
-                    <input type="number" class="form-control" id="montoTransferencia" placeholder="Ingrese el monto a transferir">
-                    <label for="descripcionTransferencia" class="form-label">Descripción</label>
-                    <input type="text" class="form-control" id="descripcionTransferencia" placeholder="Ingrese una descripción">
-                    <button type="button" class="btn btn-primary btn-lg mt-3" id="btnTransferir">Transferir</button>
-                </div>
-
-                <div class="col-md-5">
-                    <h4>Gráfico de Transferencias a Cajas Completadas</h4>
-                    <canvas id="scheduledTransfersChart"></canvas>
-                </div>
-            </div>
-        </form>
     </div>
+    <div class="row">
+        <div class="col-md-8 mx-5">
+            <h3>Transferir Dinero a Cajas</h3>
+        </div>
+    </div>
+    <form id="formTransferencia">
+        <div class="row justify-content-center">
+            <div class="col-md-5 mt-3 mb-5">
+                <label for="solicitud" class="form-label">Solicitud de dinero</label>
+                <select class="form-select" id="solicitud">
+                    <option value="solicitud1">Caja 1 - Euro</option>
+                    <option value="solicitud2">Caja 2 - Dólar</option>
+                    <option value="solicitud3">Caja 3 - Colones</option>
+                </select>
+                <label for="cajaDestino" class="form-label">Caja de Destino</label>
+                <select class="form-select" id="cajaDestino">
+                    <option value="Caja 1">Caja 1</option>
+                    <option value="Caja 2">Caja 2</option>
+                    <option value="Caja 3">Caja 3</option>
+                    <option value="Caja Chica">Caja Chica</option>
+                </select>
+                <label for="moneda" class="form-label">Moneda</label>
+                <select class="form-select" id="moneda">
+                    <option value="CRC">Colones</option>
+                    <option value="USD">Dólares</option>
+                    <option value="EUR">Euros</option>
+                </select>
+                <label for="montoTransferencia" class="form-label">Monto a Transferir</label>
+                <input type="number" class="form-control" id="montoTransferencia" placeholder="Ingrese el monto a transferir">
+                <label for="descripcionTransferencia" class="form-label">Descripción</label>
+                <input type="text" class="form-control" id="descripcionTransferencia" placeholder="Ingrese una descripción">
+                <button type="button" class="btn btn-primary btn-lg mt-3" id="btnTransferir">Transferir</button>
+            </div>
+
+            <div class="col-md-5">
+                <h4>Gráfico de Transferencias a Cajas Completadas</h4>
+                <canvas id="scheduledTransfersChart"></canvas>
+            </div>
+        </div>
+    </form>
 
     <!-- Modal para Añadir/Editar Registro -->
     <div class="modal fade" id="modalRegistro" tabindex="-1" aria-labelledby="modalRegistroLabel" aria-hidden="true">
@@ -197,8 +207,24 @@
                             <label for="registroSaldoFinal" class="form-label">Saldo Final</label>
                             <input type="number" class="form-control" id="registroSaldoFinal" placeholder="Ingrese el saldo final">
                         </div>
-                        <button type="submit" class="btn btn-primary">Guardar Registro</button>
+                        <button type="button" class="btn btn-primary" id="btnGuardarRegistro">Guardar Registro</button>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal para Confirmar Eliminación -->
+    <div class="modal fade" id="modalEliminarRegistro" tabindex="-1" aria-labelledby="modalEliminarRegistroLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalEliminarRegistroLabel">Confirmar Eliminación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>¿Estás seguro de eliminar este registro?</p>
+                    <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">Eliminar</button>
                 </div>
             </div>
         </div>
@@ -209,15 +235,33 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script2.js"></script>
+    <script src="grafTransferencias.js"></script>
     <script>
         document.getElementById('btnTransferir').addEventListener('click', function () {
-            const isSuccessful = Math.random() > 0.5;
-            if (isSuccessful) {
-                alert('Transacción exitosa');
-            } else {
-                alert('Sin dinero en bóveda');
+            const isConfirmed = confirm('¿Estás seguro de transferir este monto?');
+            if (isConfirmed) {
+                const isSuccessful = Math.random() > 0.5;
+                if (isSuccessful) {
+                    alert('Transacción exitosa');
+                } else {
+                    alert('Sin dinero en bóveda');
+                }
             }
+        });
+
+        document.getElementById('btnGuardarRegistro').addEventListener('click', function () {
+            const isConfirmed = confirm('¿Estás seguro de guardar este registro?');
+            if (isConfirmed) {
+                alert('Registro guardado exitosamente');
+                const modalRegistro = bootstrap.Modal.getInstance(document.getElementById('modalRegistro'));
+                modalRegistro.hide();
+            }
+        });
+
+        document.getElementById('btnConfirmarEliminar').addEventListener('click', function () {
+            alert('Registro eliminado exitosamente');
+            const modalEliminar = bootstrap.Modal.getInstance(document.getElementById('modalEliminarRegistro'));
+            modalEliminar.hide();
         });
     </script>
 </body>
